build: add native-maven-plugin